[gd_scene load_steps=5 format=2]

[ext_resource path="res://gameover.gd" type="Script" id=1]
[ext_resource path="res://Down Hill.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 2 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
margin_top = 30.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER !!"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Panel"]
anchor_right = 1.0
margin_top = 431.0
margin_bottom = 506.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "If you like this game, please subscribe to this channel.
"
align = 1
valign = 1

[node name="LinkButton" type="LinkButton" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 379.0
margin_top = 475.0
margin_right = -389.0
margin_bottom = -51.0
custom_colors/font_color = Color( 0.901961, 0.188235, 0.133333, 1 )
toggle_mode = true
text = "https://youtube.com/gdquest/"
underline = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 97.0
margin_top = 199.0
margin_right = -95.0
margin_bottom = -227.0
custom_constants/separation = 10

[node name="Restart" type="Button" parent="VBoxContainer"]
margin_right = 768.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "Restart"

[node name="SelectLevel" type="Button" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 768.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "Select level"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 768.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 93.0
margin_right = 768.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 2 )
text = "Back To Menu"

[connection signal="pressed" from="Panel/LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/SelectLevel" to="." method="_on_SelectLevel_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
